--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,29 @@ footer {
   text-align: center;
 }
 
+div.highlight {
+
+  // inherit parent settings to avoid getting a double box for multi-line code snippets
+  overflow: inherit;
+  background-color: inherit;
+  padding: inherit;
+  -moz-box-shadow: inherit;
+  -webkit-box-shadow: inherit;
+  box-shadow: inherit;
+  margin: inherit;
+  overflow: inherit;
+
+  pre.highlight {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+  }
+  
+  code {
+    box-sizing: content-box;
+  }
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
