Fixes borders for code blocks.

--- a/style.scss
+++ b/style.scss
@@ -294,6 +294,7 @@ div.highlight {
   box-shadow: inherit;
   margin: inherit;
   overflow: inherit;
+  border: inherit;
 
   pre.highlight {
     overflow: hidden;
